# cpp-toyhttpd

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  httpserver.cpp  httpserver.h  main.cpp  myutil.cpp  myutil.h  request.cpp  request.h  requesthandler.cpp  requesthandler.h  response.cpp  response.h  test.cpp  test.h  toyserver.cpp  toyserver.h
default/: 404.html  500.html
htdocs/: index.html
htdocs/dir/: index.html
